tests/baselines/reference/parseCommaSeparatedNewlineString.errors.txt
parseCommaSeparatedNewlineString.ts(1,2): error TS2304: Cannot find name 'a'.
parseCommaSeparatedNewlineString.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== parseCommaSeparatedNewlineString.ts (2 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    '')